--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,28 +8,21 @@
   },
   "extends": [
     "eslint:recommended",
-
     "plugin:@typescript-eslint/eslint-recommended", // Updates the eslint:recommended config to better suit Typescript
     "plugin:@typescript-eslint/recommended", // set of opinionated rules that adhere to TypeScript best practices
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
-
     "plugin:eslint-comments/recommended",
-
     "plugin:import/recommended",
     "plugin:import/typescript",
-
     "airbnb",
     "airbnb/hooks",
     "airbnb-typescript",
-
     "plugin:react/recommended",
     "plugin:react/jsx-runtime", // Using new JSX transform from React 17 so disable relevant rules
-
     "plugin:react-hooks/recommended",
     "plugin:jest/recommended",
     "plugin:testing-library/react",
     "plugin:jsx-a11y/recommended",
-
     "prettier",
     "plugin:prettier/recommended" // Enables eslint-plugin-prettier and displays prettier errors as ESLint errors. Make sure this is always the last configuration in the extends array.
   ],
@@ -54,7 +47,12 @@
   ],
   "root": true, // For configuration cascading
   "rules": {
-    "@typescript-eslint/array-type": ["error", { "default": "array-simple" }],
+    "@typescript-eslint/array-type": [
+      "error",
+      {
+        "default": "array-simple"
+      }
+    ],
     // "@typescript-eslint/consistent-type-exports": "error",
     "@typescript-eslint/consistent-type-imports": "error",
     "@typescript-eslint/explicit-function-return-type": "error",
@@ -71,25 +69,30 @@
     "@typescript-eslint/prefer-includes": "error",
     "@typescript-eslint/prefer-nullish-coalescing": "error",
     "@typescript-eslint/prefer-optional-chain": "error",
-    "@typescript-eslint/prefer-readonly-parameter-types": "error",
+    // "@typescript-eslint/prefer-readonly-parameter-types": "error",
     "@typescript-eslint/prefer-reduce-type-parameter": "error",
     "@typescript-eslint/prefer-regexp-exec": "error",
     "@typescript-eslint/prefer-string-starts-ends-with": "error",
     "@typescript-eslint/promise-function-async": "error",
     "@typescript-eslint/strict-boolean-expressions": "error",
-
     "testing-library/no-manual-cleanup": "error",
     "testing-library/no-render-in-setup": "error",
     "testing-library/no-wait-for-snapshot": "error",
     "testing-library/prefer-explicit-assert": "error",
     "testing-library/prefer-presence-queries": "error",
-    "testing-library/prefer-wait-for": "error"
+    "testing-library/prefer-wait-for": "error",
     // TODO: enable when react-scripts start using eslint-plugin-testing-library v4.3.0+
     // "testing-library/no-unnecessary-act": "error",
     // "testing-library/no-wait-for-multiple-assertions": "error",
     // "testing-library/no-wait-for-side-effects": "error",
     // "testing-library/prefer-query-by-disappearance": "error",
     // "testing-library/prefer-user-event": "error",
+    "react/require-default-props": [
+      "error",
+      {
+        "ignoreFunctionalComponents": true
+      }
+    ]
   },
   "settings": {
     "react": {
