feat: add footer filter support

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -100,6 +100,15 @@
         "allowFunctions": true,
         "ignoreDOMComponents": true
       }
+    ],
+    "no-param-reassign": [
+      "error",
+      {
+        "props": true,
+        "ignorePropertyModificationsForRegex": [
+          "^draft"
+        ]
+      }
     ]
   },
   "settings": {
