--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -106,7 +106,8 @@
       {
         "props": true,
         "ignorePropertyModificationsForRegex": [
-          "^draft"
+          "^draft",
+          "keys"
         ]
       }
     ]
