--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
+    "ts-key-enum": "^2.0.8",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
