--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -5,6 +5,8 @@
     "*.{ts,tsx}": [
       "prettier --write",
       "npm run lint:fix",
-      "npm run lint:css"
+      "npm run lint:css",
+      "tsc-files --noEmit",
+      "npm run test:related"
     ]
 }
