--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
     "ts-key-enum": "^2.0.8",
+    "tsc-files": "^1.1.2",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
