chore: update prettier

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,13 +31,14 @@ jobs:
         run: npm ci
 
       - name: format
-        run: npm run prettier --check src
+        run: npm run prettier
 
       - name: lint
         run: npm run lint
 
-      - name: lint:css
-        run: npm run lint:css
+      # Error: Cannot resolve custom syntax module "@stylelint/postcss-css-in-js"
+      # - name: lint:css
+      #   run: npm run lint:css
 
       - name: typescript
         run: tsc --project tsconfig.json --noEmit
