--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
     "editor.formatOnSave": true,
     "files.eol": "\n",
     "editor.tabSize": 2,
-    "prettier.configPath": ".prettierrc"
+    "css.lint.unknownAtRules": "ignore"
 }
